# pallet-artists-v2

./: Cargo.toml
js/examples/: package.json
js/examples/src/: index.ts
src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
