[package]
name = "pallet-artists-v2"
version = "1.0.0-dev"
authors = ["Allfeat labs <hello@allfeat.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://allfeat.network"
description = "FRAME artists management pallet for the Allfeat chain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.3"
derive-getters = "0.3.0"

# Substrate
frame-support = { version = "28.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
frame-system = { version = "28.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
sp-runtime = { version = "31.0.1", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
frame-benchmarking = { version = "28.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0", optional = true }

genres-registry = { version = "1.0.0-dev", default-features = false, git = "https://github.com/Allfeat/genres-registry.git", branch = "allfeat-polkadot-v1.9.0", features = ["substrate"] }

[dev-dependencies]
pallet-balances = { version = "28.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
sp-io = { version = "30.0.0", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "log/std",
    "genres-registry/std",
    "pallet-balances/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "pallet-balances/try-runtime",]